--- a/modules/document_request/doc/en/CHANGELOG
+++ b/modules/document_request/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12341 Define a workflow for attachment status
 * FEA#12341 Add APIs on document request lines
 * FEA#12567 Add "Waiting Validation" status on attachments
 * BUG#12630 Only check data_status if the document description requires it
