contract_insurance_document_request: Add requested documents function to rule engine (#3194)
Fix #12837

--- a/modules/contract_insurance_document_request/doc/en/CHANGELOG
+++ b/modules/contract_insurance_document_request/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12837 Add new function to rule engine which returns all requested documents for a contract
 * FEA#12764 Add an API to upload documents to a contract
 * FEA#12064 The document request lines can now target a covered element
 
