contract_insurance: Raise error when covered person is covered under the same options at same date (#3168)
Fix #12755

--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -1074,6 +1074,10 @@ msgctxt "field:offered.configuration.default_quote_number_sequence,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:offered.option.description,allow_subscribe_coverage_multiple_times:"
+msgid "Allow subscribe coverage multiple times"
+msgstr "Autoriser la souscription de la garantie plusieurs fois"
+
 msgctxt "field:offered.option.description.ending_rule,automatic_sub_status:"
 msgid "Automatic Sub Status"
 msgstr "Sous statut automatique"
@@ -1223,6 +1227,14 @@ msgstr ""
 "Si cochée, les utilisateurs seront capables de choisir librement la date de "
 "conditions d'une souscription de contrat. Sinon, la date de conditions sera "
 "la date d'effet."
+
+msgctxt "help:offered.option.description,allow_subscribe_coverage_multiple_times:"
+msgid ""
+"If set, you will be allowed to cover an element was already covered with"
+" the same options at the same date on different contracts"
+msgstr ""
+"Si défini, vous pourrez couvrir un élément déjà couvert avec les "
+"mêmes options à la même date sur différents contrats"
 
 msgctxt "help:offered.option.description.ending_rule,automatic_sub_status:"
 msgid ""
