bank_cog: Bics link to wrong bank (#3158)
Fix #12638

--- a/modules/bank_cog/doc/en/CHANGELOG
+++ b/modules/bank_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12637 Bics link to wrong bank in Coog with Coog import default file
 * OTH#0000 Fix bank data generation using default coog file
 
 Version 2.4 - 2019-04-12
