--- a/modules/bank_cog/doc/fr/CHANGELOG
+++ b/modules/bank_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12637 BICS lié aux fausses banques
 * OTH#0000 Correction de la génération de données bancaires en utilisant le fichier coog par défaut
 
 Version 2.4 - 2019-04-12
