--- a/modules/endorsement/doc/fr/CHANGELOG
+++ b/modules/endorsement/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12704 Ajout des APIs d'avenant administratif
 * OTH#00000 Correction de la génération des documents
 * BUG#12427 Vérifier les données complémentaires de contrat, d'avenant et de garantie dans les avenants
 * BUG#11934 Correction de la mécanique d'avertissement dans le cas d'avenants sur un contrat avec un processus en cours
