--- a/modules/account_invoice_cog/doc/fr/CHANGELOG
+++ b/modules/account_invoice_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#12907 Correction d'une erreur lors d'un changement de conditions de paiments
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 * FEA#8226 Adaptation de la réconciliation à l'amélioration de la méthode tryton reconcile
