contrat_invoicing_duration: add date in rule engine context (#3207)

--- a/modules/contract_invoicing_duration/doc/fr/CHANGELOG
+++ b/modules/contract_invoicing_duration/doc/fr/CHANGELOG
@@ -1,1 +1,2 @@
+* OTH#00000 Ajout de la date dans le contexte d'exécution du moteur de règle
 * FEA#12419 Produit obsèque: gestion des quittances sur une durée spécifique
