document_request_electronic_signature: Trigger an event when signature is complete (#3209)
Fix #12876

--- a/modules/document_request/locale/fr.po
+++ b/modules/document_request/locale/fr.po
@@ -282,6 +282,14 @@ msgctxt "field:ir.attachment,status:"
 msgid "Status"
 msgstr "Statut"
 
+msgctxt "field:ir.attachment,request_line:"
+msgid "Request Line"
+msgstr "Ligne de demande de document"
+
+msgctxt "field:ir.attachment,request_lines:"
+msgid "Request Lines"
+msgstr "Lignes de demande de document"
+
 msgctxt "field:ir.attachment,status_change_date:"
 msgid "Status Change Date"
 msgstr "Date de changement de statut"
