--- a/modules/endorsement_insurance/doc/fr/CHANGELOG
+++ b/modules/endorsement_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,7 @@
+* BUG#11805 Suppression de la date de début manuelle d'une garantie lors d'un
+changement de date d'effet du contrat, lorsque la garantie a une date d'effet
+manuelle égale à la date d'effet du contrat
+
 Version 2.4 - 2019-04-12
 * BUG#11400 Ajout d'une migration manquante de la table d'historique des éléments couverts
 * BUG#10693 Correction de l'ordre des éléments de l'avenant de gestion des assurés par défaut
